--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       <div class="header-bottom">
         <p class="today-date">25 / 05 <span>/ 2022</span></p>
         <ul class="social-media">
-          <li><a href="">Instagram</a></li>
-          <li><a href="">Youtube</a></li>
-          <li><a href="">TikTok</a></li>
-          <li><a href="">Twitter</a></li>
+          <li><a href="https://www.Instagram.com" target="_blank">Instagram</a></li>
+          <li><a href="https://www.Youtube.com" target="_blank">Youtube</a></li>
+          <li><a href="https://www.Tiktok.com" target="_blank">TikTok</a></li>
+          <li><a href="https://www.Twitter.com" target="_blank">Twitter</a></li>
         </ul>
       </div>
     </header>
