--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   <body>
     <!-- Header -->
 
-    <header class="parallax-window" data-parallax="scroll" data-image-src="img/tanjung-bira.jpg">
+    <header class="parallax-window" data-parallax="scroll" data-image-src="img/tanjung-bira.jpg" style="background-image: linear-gradient(to top, black 10%, rgba(0, 0, 0, 0.1) 75%)">
       <nav>
         <h1 class="logo">
           <a href="/">Indonesia</a>
         </h1>
         <a href="" class="btn-sign-up">Sign Up</a>
       </nav>
-      <div class="header-title">Sulawesi</div>
+      <div class="header-title" style="text-shadow: 2px 2px 10px black">Sulawesi Selatan</div>
       <div class="header-bottom">
         <p class="today-date">25 / 05 <span>/ 2022</span></p>
         <ul class="social-media">
